--- a/app.json
+++ b/app.json
@@ -1,54 +1,26 @@
 {
   "pages": [
-    "pages/popular/popular",
-    "pages/coming/coming",
-    "pages/top/top",
-    "pages/search/search",
-    "pages/filmDetail/filmDetail",
-    "pages/personDetail/personDetail",
-    "pages/searchResult/searchResult",
-    "pages/my/my",
-    "pages/favorite/favorite",
-    "pages/history/history",
-    "pages/shake/shake",
-    "pages/gallery/gallery",
-    "pages/setting/setting",
-    "pages/skin/skin",
-    "pages/personInfo/personInfo",
-    "pages/editPersonInfo/editPersonInfo",
-    "pages/systemInfo/systemInfo",
-    "pages/about/about",
-    "pages/location/location"
+    "pages/comment/comment",
+    "pages/my/my"
   ],
   "window": {
-    "navigationBarBackgroundColor": "#47a86c",
+    "navigationBarBackgroundColor": "#333",
     "navigationBarTextStyle": "white",
-    "navigationBarTitleText":  "电影推荐",
+    "navigationBarTitleText":  "Uncle Call",
     "backgroundColor": "#fff",
     "backgroundTextStyle": "dark",
-    "enablePullDownRefresh": true
+    "enablePullDownRefresh": false
   },
   "tabBar": {
-    "color": "#686868",
-    "selectedColor": "#47a86c",
+    "color": "#a9adaa",
+    "selectedColor": "#333",
     "backgroundColor": "#ffffff",
     "borderStyle": "white",
     "list": [{
-      "pagePath": "pages/popular/popular",
-      "iconPath": "dist/images/popular_icon.png",
-      "selectedIconPath": "dist/images/popular_active_icon.png",
-      "text": "热映"
-    }, {
-      "pagePath": "pages/coming/coming",
-      "iconPath": "dist/images/coming_icon.png",
-      "selectedIconPath": "dist/images/coming_active_icon.png",
-      "text": "待映"
-    },
-    {
-      "pagePath": "pages/top/top",
-      "iconPath": "dist/images/top_icon.png",
-      "selectedIconPath": "dist/images/top_active_icon.png",
-      "text": "口碑"
+      "pagePath": "pages/comment/comment",
+      "iconPath": "dist/images/comment_icon.png",
+      "selectedIconPath": "dist/images/comment_active_icon.png",
+      "text": "短评"
     },
     {
       "pagePath": "pages/my/my",
